Add new thermostat status: LOCKOUT